# Final_Project_CHAT

./: CMakeLists.txt  README.md
sources/: CommandLineInterface.cpp  Database.cpp  Database.h  Message.cpp  Message.h  Test.cpp  adminpanel.cpp  adminpanel.h  adminpanel.ui  client.cpp  client.h  database_helper.cpp  database_helper.h  loginform.cpp  loginform.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  server.cpp  server.h  sha1.cpp  sha1.h  startscreen.cpp  startscreen.h  startscreen.ui
sources/Client/: client.cpp  client.h  message.cpp  message.h  user.cpp  user.h
sources/Database/: database.cpp  database.h  database_helper.cpp  database_helper.h  parsing.cpp  parsing.h  sha1.cpp  sha1.h
sources/Log_Register/: loginform.cpp  loginform.h  loginform.ui  registrationform.cpp  registrationform.h  registrationform.ui  startscreen.cpp  startscreen.h
sources/Mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
sources/Server/: adminpanel.cpp  adminpanel.h  adminpanel.ui  server.cpp  server.h
styles/: dark.qss  dark.qss.txt  light.qss  light.qss.txt
translations/: my_ru.qm  my_ru.ts
